; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngstest.c_init_sRGB_to_d.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngstest.c_init_sRGB_to_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sRGB_to_d = common dso_local global i32* null, align 8
@g22_to_d = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @init_sRGB_to_d to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_sRGB_to_d() #0 {
  %1 = alloca i32, align 4
  %2 = load i32*, i32** @sRGB_to_d, align 8
  %3 = getelementptr inbounds i32, i32* %2, i64 0
  store i32 0, i32* %3, align 4
  store i32 1, i32* %1, align 4
  br label %4

4:                                                ; preds = %17, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 255
  br i1 %6, label %7, label %20

7:                                                ; preds = %4
  %8 = load i32, i32* %1, align 4
  %9 = sitofp i32 %8 to double
  %10 = fdiv double %9, 2.550000e+02
  %11 = fptosi double %10 to i32
  %12 = call i32 @linear_from_sRGB(i32 %11)
  %13 = load i32*, i32** @sRGB_to_d, align 8
  %14 = load i32, i32* %1, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  store i32 %12, i32* %16, align 4
  br label %17

17:                                               ; preds = %7
  %18 = load i32, i32* %1, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %1, align 4
  br label %4

20:                                               ; preds = %4
  %21 = load i32*, i32** @sRGB_to_d, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 255
  store i32 1, i32* %22, align 4
  %23 = load i32*, i32** @g22_to_d, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 0
  store i32 0, i32* %24, align 4
  store i32 1, i32* %1, align 4
  br label %25

25:                                               ; preds = %38, %20
  %26 = load i32, i32* %1, align 4
  %27 = icmp slt i32 %26, 255
  br i1 %27, label %28, label %41

28:                                               ; preds = %25
  %29 = load i32, i32* %1, align 4
  %30 = sitofp i32 %29 to double
  %31 = fdiv double %30, 2.550000e+02
  %32 = fptosi double %31 to i32
  %33 = call i32 @pow(i32 %32, i32 2)
  %34 = load i32*, i32** @g22_to_d, align 8
  %35 = load i32, i32* %1, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  store i32 %33, i32* %37, align 4
  br label %38

38:                                               ; preds = %28
  %39 = load i32, i32* %1, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %1, align 4
  br label %25

41:                                               ; preds = %25
  %42 = load i32*, i32** @g22_to_d, align 8
  %43 = getelementptr inbounds i32, i32* %42, i64 255
  store i32 1, i32* %43, align 4
  ret void
}

declare dso_local i32 @linear_from_sRGB(i32) #1

declare dso_local i32 @pow(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
